--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=SistemaV
+application.vendor=USER
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,11 +33,10 @@ dist.jar=${dist.dir}/SistemaV.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SistemaV
+endorsed.classpath=
 excludes=
-file.reference.-Users=..\\..\\..\\..
 file.reference.AbsoluteLayout.jar=C:\\Users\\USER\\Downloads\\librerias\\AbsoluteLayout.jar
 file.reference.commons-collections4-4.1.jar=C:\\Users\\USER\\Downloads\\librerias\\commons-collections4-4.1.jar
-file.reference.Downloads-librerias=C:\\Users\\USER\\Downloads\\librerias
 file.reference.h2-1.4.200.jar=C:\\Users\\USER\\Downloads\\librerias\\h2-1.4.200.jar
 file.reference.itextpdf-5.5.1.jar=C:\\Users\\USER\\Downloads\\librerias\\itextpdf-5.5.1.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\USER\\Downloads\\librerias\\jcalendar-1.4.jar
@@ -52,8 +52,6 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.-Users}:\
-    ${file.reference.Downloads-librerias}:\
     ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.commons-collections4-4.1.jar}:\
     ${file.reference.h2-1.4.200.jar}:\
